[gd_scene load_steps=4 format=3 uid="uid://7sq87rc5vdf5"]

[ext_resource type="Shader" uid="uid://ccp2v6p310iom" path="res://theme/blurry_panel.gdshader" id="1_15atc"]
[ext_resource type="Script" uid="uid://cpwk11ttug7vh" path="res://editor/controls/workspace_view/controls/alerts_panel/alerts_panel.gd" id="2_se7m7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tuc5w"]
shader = ExtResource("1_15atc")

[node name="AlertsPanel" type="PanelContainer"]
material = SubResource("ShaderMaterial_tuc5w")
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"BlurryPanel"
script = ExtResource("2_se7m7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Alerts"

[node name="WarningsMaskButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.396889, 0.396889, 0.396889, 1)
theme_override_colors/font_pressed_color = Color(0.41171, 0.597145, 1, 1)
toggle_mode = true
button_pressed = true
text = " ⚠3"
flat = true

[node name="ErrorsMaskButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.396889, 0.396889, 0.396889, 1)
theme_override_colors/font_pressed_color = Color(0.41171, 0.597145, 1, 1)
toggle_mode = true
text = "⛔ 1"
flat = true

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "❌"
flat = true

[node name="Tree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
allow_reselect = true
